--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <title>Payoo</title>
   </head>
   <body class="outfit h-[100vh] flex items-center justify-center bg-[#F4F5F7]">
-    <div>
+    <div class="m-4">
       <div
-        class="h-[140px] w-[90%] mx-auto bg-[url(/assets/bg.png)] bg-cover flex justify-center items-center"
+        class="h-[140px] w-[80%] mx-auto bg-[url(/assets/bg.png)] bg-cover flex justify-center items-center"
       >
         <img src="./assets/Group.png" alt="" />
       </div>
-      <form action="" class="p-10 rounded-3xl bg-[#ffff]">
+      <form action="" class="p-8 rounded-3xl bg-[#ffff]">
         <label for="">Mobile Number</label>
         <input
           type="text"
@@ -37,7 +37,10 @@
           class="input rounded-3xl w-full h-12 my-2 bg-[#f4f5f7] border-0"
         />
         <br />
-        <button class="h-12 rounded-3xl w-full my-2 bg-[#0874F2] text-white">
+        <button
+          id="login-btn"
+          class="h-12 rounded-3xl w-full my-2 bg-[#0874F2] text-white"
+        >
           Login
         </button>
       </form>
