added interactive login system

--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
       <form action="" class="p-8 rounded-3xl bg-[#ffff]">
         <label for="">Mobile Number</label>
         <input
+          id="mobile-number"
           type="text"
           placeholder="Enter your number"
           class="input rounded-3xl w-full h-12 my-2 bg-[#f4f5f7] border-0"
@@ -32,6 +33,7 @@
         <label for="">4 Digit Pin</label>
 
         <input
+          id="pin-number"
           type="text"
           placeholder="Enter your 4 Digit Pin "
           class="input rounded-3xl w-full h-12 my-2 bg-[#f4f5f7] border-0"
@@ -39,7 +41,7 @@
         <br />
         <button
           id="login-btn"
-          class="h-12 rounded-3xl w-full my-2 bg-[#0874F2] text-white"
+          class="h-12 rounded-3xl w-full my-2 bg-[#0874F2] text-white cursor-pointer"
         >
           Login
         </button>
