--- a/home.html
+++ b/home.html
@@ -3,9 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./tailwind.css" />
+    <!-- font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- daisyUI cdn -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- tailwind cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Payoo Home</title>
   </head>
-  <body>
-    <h1>This is the home page</h1>
+  <body class="outfit bg-[#F4F5F7]">
+    <div class="max-w-[450px] mx-auto">
+      <div class="bg-white rounded-b-3xl py-7">
+        <div
+          class="flex justify-center items-center gap-25 border-b border-gray-300 pb-4 px-4"
+        >
+          <div class="flex justify-center items-center gap-1">
+            <img src="./assets/Group.png" alt="" class="w-12" />
+            <div>
+              <h2 class="font-extrabold text-lg">$45000</h2>
+              <p class="text-[#08080880]">Available Balance</p>
+            </div>
+          </div>
+          <button id="log-out" class="btn btn-soft text-[#08080880]">
+            <i
+              class="fa-solid fa-arrow-right-from-bracket rotate-180 text-[#666768]"
+            ></i
+            >Log Out
+          </button>
+        </div>
+
+        <div class="my-7 px-4">
+          <h1 class="text-2xl font-extrabold mb-2.5">
+            <i class="fa-solid fa-fire text-amber-500"></i>Welcome to Payooo!
+          </h1>
+          <p class="text-[#08080880]">
+            Enjoy easy and convenient financial services with us. Cashout charge
+            is low and
+          </p>
+        </div>
+
+        <div id="features" class="grid grid-cols-3 gap-5 px-2 pb-6">
+          <div
+            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center"
+          >
+            <div>
+              <img src="./assets/wallet1.png" class="mx-auto mb-2" alt="" />
+              <h3 class="text-[14px] text-[#080808b4]">Add Money</h3>
+            </div>
+          </div>
+          <div
+            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center"
+          >
+            <div>
+              <img src="./assets/send1.png" class="mx-auto mb-2" alt="" />
+              <h3 class="text-[14px] text-[#080808b4]">Cashout</h3>
+            </div>
+          </div>
+          <div
+            class="border-1 border-gray-300 rounded-lg text-center py-4 px-3 flex justify-center items-center"
+          >
+            <div>
+              <img src="./assets/money1.png" class="mx-auto mb-2" alt="" />
+              <h3 class="text-[14px] text-[#080808b4]">Transfer Money</h3>
+            </div>
+          </div>
+          <div
+            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center"
+          >
+            <div>
+              <img src="./assets/bonus1.png" class="mx-auto mb-2" alt="" />
+              <h3 class="text-[14px] text-[#080808b4]">Get Bonus</h3>
+            </div>
+          </div>
+          <div
+            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center"
+          >
+            <div>
+              <img src="./assets/purse1.png" class="mx-auto mb-2" alt="" />
+              <h3 class="text-[14px] text-[#080808b4]">Pay Bill</h3>
+            </div>
+          </div>
+          <div
+            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center"
+          >
+            <div>
+              <img
+                src="./assets/transaction1.png"
+                class="mx-auto mb-2"
+                alt=""
+              />
+              <h3 class="text-[14px] text-[#080808b4]">Transaction</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="./script/home.js"></script>
   </body>
 </html>
