--- a/home.html
+++ b/home.html
@@ -24,14 +24,15 @@
   </head>
   <body class="outfit bg-[#F4F5F7]">
     <div class="max-w-[450px] mx-auto">
-      <div class="bg-white rounded-b-3xl py-7">
+      <!-- features section -->
+      <div class="bg-white rounded-b-3xl pt-3">
         <div
           class="flex justify-center items-center gap-25 border-b border-gray-300 pb-4 px-4"
         >
           <div class="flex justify-center items-center gap-1">
             <img src="./assets/Group.png" alt="" class="w-12" />
             <div>
-              <h2 class="font-extrabold text-lg">$45000</h2>
+              <h2 class="font-extrabold text-lg">$ <span>45000</span></h2>
               <p class="text-[#08080880]">Available Balance</p>
             </div>
           </div>
@@ -67,7 +68,7 @@
           >
             <div>
               <img src="./assets/send1.png" class="mx-auto mb-2" alt="" />
-              <h3 class="text-[14px] text-[#080808b4]">Cashout</h3>
+              <h3 class="text-[14px] text-[#080808b4]">CashOut</h3>
             </div>
           </div>
           <div
@@ -107,6 +108,51 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- form section -->
+      <div class="py-3 px-4">
+        <h1 class="font-semibold text-lg mb-2">Add Money</h1>
+        <form class="p-8 rounded-3xl bg-[#ffff]">
+          <label for="">Select A bank</label>
+          <select
+            class="select select-md rounded-3xl w-full h-12 my-2 bg-[#f4f5f7] border-0"
+          >
+            <option disabled selected>Select bank</option>
+            <option>National Bank</option>
+            <option>AB Bank</option>
+            <option>Islamic Bank</option>
+          </select>
+          <label for="">Bank Account Number</label>
+          <input
+            id=""
+            type="text"
+            placeholder="Enter 11 digit acount number"
+            class="input rounded-3xl w-full h-12 my-2 bg-[#f4f5f7] border-0"
+          />
+          <label for="">Amount to Add</label>
+          <input
+            id=""
+            type="text"
+            placeholder="Add amount to withdraw"
+            class="input rounded-3xl w-full h-12 my-2 bg-[#f4f5f7] border-0"
+          />
+          <br />
+          <label for="">Pin Number</label>
+          <input
+            id=""
+            type="text"
+            placeholder="Enter your 4 Digit Pin "
+            class="input rounded-3xl w-full h-12 my-2 bg-[#f4f5f7] border-0"
+          />
+          <br />
+          <button
+            id=""
+            class="h-12 rounded-3xl w-full my-2 bg-[#0874F2] text-white cursor-pointer text-lg font-semibold"
+          >
+            Add Money
+          </button>
+        </form>
       </div>
     </div>
     <script src="./script/home.js"></script>
