--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="outfit h-[100vh] flex items-center justify-center bg-[#F4F5F7]">
     <div class="m-4">
       <div
-        class="h-[140px] w-[80%] mx-auto bg-[url(/assets/bg.png)] bg-cover flex justify-center items-center"
+        class="h-[140px] w-[80%] mx-auto bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center"
       >
         <img src="./assets/Group.png" alt="" />
       </div>
