--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Payoo Home</title>
   </head>
-  <body class="outfit h-[100%] bg-[#F4F5F7]">
+  <body class="outfit pb-28 bg-[#F4F5F7]">
     <div class="max-w-[450px] mx-auto">
       <!-- features section -->
       <div class="bg-white rounded-b-3xl pt-3 px-2">
