--- a/home.html
+++ b/home.html
@@ -27,9 +27,9 @@
       <!-- features section -->
       <div class="bg-white rounded-b-3xl pt-3 px-2">
         <div
-          class="flex justify-center items-center gap-25 border-b border-gray-300 pb-4 px-4"
+          class="flex justify-between items-center border-b border-gray-300 pb-4 px-4"
         >
-          <div class="flex justify-center items-center gap-1">
+          <div class="flex justify-around items-center gap-1">
             <img src="./assets/Group.png" alt="" class="w-12" />
             <div>
               <h2 class="font-extrabold text-lg">
@@ -166,7 +166,7 @@
 
       <!-- CashOut form section -->
 
-      <div id="cashout-form" class="py-2 px-2">
+      <div id="cashout-form" class="py-2 px-2 hidden">
         <h1 class="font-semibold text-lg mb-2">CashOut</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">Agent Number</label>
@@ -202,7 +202,7 @@
       </div>
 
       <!-- Transfer Money form section -->
-      <div id="transfer-form" class="py-2 px-2">
+      <div id="transfer-form" class="py-2 px-2 hidden">
         <h1 class="font-semibold text-lg mb-2">Transfer Money</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">User Account Number</label>
