fixed few problems and page switching

--- a/home.html
+++ b/home.html
@@ -240,6 +240,6 @@
       <!-- Pay Bill form section -->
       <!-- Transaction form section -->
     </div>
-    <script src="./script/home.js"></script>
+    <script src="./home.js"></script>
   </body>
 </html>
