--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
       </form>
     </div>
 
-    <script src="./script/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
