--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
       </div>
 
       <!-- Add Money form section -->
-      <div id="add-money-form" class="py-2 px-2">
+      <div id="add-money-form" class="py-2 px-2 hidden">
         <h1 class="font-semibold text-lg mb-2">Add Money</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">Select A bank</label>
@@ -260,7 +260,7 @@
 
       <!-- Pay Bill form section -->
 
-      <div id="pay-bill-form" class="py-2 px-2">
+      <div id="pay-bill-form" class="py-2 px-2 hidden">
         <h1 class="font-semibold text-lg mb-2">Pay Bill</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">Select A bank</label>
@@ -305,6 +305,42 @@
         </form>
       </div>
       <!-- Transaction form section -->
+      <div id="transaction-form" class="py-2 px-2">
+        <div class="flex justify-between">
+          <h1 class="font-semibold text-lg mb-2">Transaction History</h1>
+          <h1 class="text-gray-400 mb-2">View All</h1>
+        </div>
+        <div
+          class="flex justify-between items-center bg-white rounded-lg p-3 my-2"
+        >
+          <div class="flex justify-center items-center gap-2">
+            <div class="rounded-4xl p-2 bg-gray-100">
+              <img src="./assets/wallet1.png" alt="" />
+            </div>
+
+            <div>
+              <h1 class="font-semibold text-gray-600">CashOut</h1>
+              <p class="text-xs text-gray-400">Today 01:44AM</p>
+            </div>
+          </div>
+          <i class="fa-solid fa-ellipsis-vertical text-xl text-gray-500"></i>
+        </div>
+        <div
+          class="flex justify-between items-center bg-white rounded-lg p-3 my-2"
+        >
+          <div class="flex justify-center items-center gap-2">
+            <div class="rounded-4xl p-2 bg-gray-100">
+              <img src="./assets/wallet1.png" alt="" />
+            </div>
+
+            <div>
+              <h1 class="font-semibold text-gray-600">Electricity Bill</h1>
+              <p class="text-xs text-gray-400">Today 01:44AM</p>
+            </div>
+          </div>
+          <i class="fa-solid fa-ellipsis-vertical text-xl text-gray-500"></i>
+        </div>
+      </div>
     </div>
     <script src="./home.js"></script>
   </body>
