--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
         <div id="features" class="grid grid-cols-3 gap-5 px-2 pb-6">
           <div
             id="add-money-ftr"
-            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
+            class="section-btn border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
           >
             <div>
               <img src="./assets/wallet1.png" class="mx-auto mb-2" alt="" />
@@ -68,7 +68,7 @@
           </div>
           <div
             id="cashout-ftr"
-            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
+            class="section-btn border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
           >
             <div>
               <img src="./assets/send1.png" class="mx-auto mb-2" alt="" />
@@ -77,7 +77,7 @@
           </div>
           <div
             id="transfer-ftr"
-            class="border-1 border-gray-300 rounded-lg text-center py-4 px-3 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
+            class="section-btn border-1 border-gray-300 rounded-lg text-center py-4 px-3 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
           >
             <div>
               <img src="./assets/money1.png" class="mx-auto mb-2" alt="" />
@@ -86,7 +86,7 @@
           </div>
           <div
             id="get-bonus-ftr"
-            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
+            class="section-btn border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
           >
             <div>
               <img src="./assets/bonus1.png" class="mx-auto mb-2" alt="" />
@@ -95,7 +95,7 @@
           </div>
           <div
             id="pay-bill-ftr"
-            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
+            class="section-btn border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
           >
             <div>
               <img src="./assets/purse1.png" class="mx-auto mb-2" alt="" />
@@ -104,7 +104,7 @@
           </div>
           <div
             id="transaction-ftr"
-            class="border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
+            class="section-btn border-1 border-gray-300 rounded-lg text-center py-4 px-6 flex justify-center items-center text-[14px] text-[#080808b4] hover:bg-blue-50 hover:border-1 hover:border-blue-500 hover:text-blue-500 hover:font-semibold"
           >
             <div>
               <img
@@ -119,7 +119,7 @@
       </div>
 
       <!-- Add Money form section -->
-      <div id="add-money-form" class="py-2 px-2 hidden">
+      <div id="add-money-form" class="py-2 px-2 hidden form">
         <h1 class="font-semibold text-lg mb-2">Add Money</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">Select A bank</label>
@@ -166,7 +166,7 @@
 
       <!-- CashOut form section -->
 
-      <div id="cashout-form" class="py-2 px-2 hidden">
+      <div id="cashout-form" class="py-2 px-2 hidden form">
         <h1 class="font-semibold text-lg mb-2">CashOut</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">Agent Number</label>
@@ -202,7 +202,7 @@
       </div>
 
       <!-- Transfer Money form section -->
-      <div id="transfer-form" class="py-2 px-2 hidden">
+      <div id="transfer-form" class="py-2 px-2 hidden form">
         <h1 class="font-semibold text-lg mb-2">Transfer Money</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">User Account Number</label>
@@ -238,7 +238,7 @@
       </div>
       <!-- Get Bonus form section -->
 
-      <div id="bonus-form" class="py-2 px-2 hidden">
+      <div id="bonus-form" class="py-2 px-2 hidden form">
         <h1 class="font-semibold text-lg mb-2">Get Bonus</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">Enter Bonus Coupon</label>
@@ -260,7 +260,7 @@
 
       <!-- Pay Bill form section -->
 
-      <div id="pay-bill-form" class="py-2 px-2 hidden">
+      <div id="pay-bill-form" class="py-2 px-2 hidden form">
         <h1 class="font-semibold text-lg mb-2">Pay Bill</h1>
         <form class="py-2 px-5 rounded-3xl bg-[#ffff]">
           <label for="">Select A bank</label>
@@ -305,7 +305,7 @@
         </form>
       </div>
       <!-- Transaction form section -->
-      <div id="transaction-form" class="py-2 px-2">
+      <div id="transaction-form" class="py-2 px-2 form">
         <div class="flex justify-between">
           <h1 class="font-semibold text-lg mb-2">Transaction History</h1>
           <h1 class="text-gray-400 mb-2">View All</h1>
