added some transaction

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./tailwind.css" />
+    <link rel="shortcut icon" href="./assets/Group.png" type="image/x-icon" />
     <!-- font awesome cdn -->
     <link
       rel="stylesheet"
@@ -320,6 +321,51 @@
 
             <div>
               <h1 class="font-semibold text-gray-600">CashOut</h1>
+              <p class="text-xs text-gray-400">Today 01:44AM</p>
+            </div>
+          </div>
+          <i class="fa-solid fa-ellipsis-vertical text-xl text-gray-500"></i>
+        </div>
+        <div
+          class="flex justify-between items-center bg-white rounded-lg p-3 my-2"
+        >
+          <div class="flex justify-center items-center gap-2">
+            <div class="rounded-4xl p-2 bg-gray-100">
+              <img src="./assets/wallet1.png" alt="" />
+            </div>
+
+            <div>
+              <h1 class="font-semibold text-gray-600">Electricity Bill</h1>
+              <p class="text-xs text-gray-400">Today 01:44AM</p>
+            </div>
+          </div>
+          <i class="fa-solid fa-ellipsis-vertical text-xl text-gray-500"></i>
+        </div>
+        <div
+          class="flex justify-between items-center bg-white rounded-lg p-3 my-2"
+        >
+          <div class="flex justify-center items-center gap-2">
+            <div class="rounded-4xl p-2 bg-gray-100">
+              <img src="./assets/wallet1.png" alt="" />
+            </div>
+
+            <div>
+              <h1 class="font-semibold text-gray-600">Electricity Bill</h1>
+              <p class="text-xs text-gray-400">Today 01:44AM</p>
+            </div>
+          </div>
+          <i class="fa-solid fa-ellipsis-vertical text-xl text-gray-500"></i>
+        </div>
+        <div
+          class="flex justify-between items-center bg-white rounded-lg p-3 my-2"
+        >
+          <div class="flex justify-center items-center gap-2">
+            <div class="rounded-4xl p-2 bg-gray-100">
+              <img src="./assets/wallet1.png" alt="" />
+            </div>
+
+            <div>
+              <h1 class="font-semibold text-gray-600">Electricity Bill</h1>
               <p class="text-xs text-gray-400">Today 01:44AM</p>
             </div>
           </div>
