--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./tailwind.css" />
+    <link rel="shortcut icon" href="./assets/Group.png" type="image/x-icon" />
     <!-- daisyUI cdn -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@5"
